[project]
name = "rhythm"
version = "0.1.0"
description = "End-to-end mlops pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.35",
    "fastapi[standard]>=0.116.2",
    "mlflow>=3.5.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "scikit-learn>=1.7.2",
]

[tool.pyright]
reportAny = false
reportExplicitAny = false
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
preview = true
